--- a/skysub.tex
+++ b/skysub.tex
@@ -489,7 +489,8 @@ Our sky flats are designed to unify the zeropoints of the four WIRCam detectors 
 % While the formal photometric calibration described above pools together 2MASS stars seen in any of the four detectors, we can also generate photometric calibrations in each individual detector.
 The accuracy of this calibration can be verified by comparing photometric zeropoint estimates for individual WIRCam chips.
 In \Fig{fw100k_chip_to_chip} we show the distribution of mean chip-to-chip zeropoints offsets observed in images processed by real-time sky flats, and find that zeropoints are consistent within $\pm 0.1$ mag.
-\comment{JS: this method of verifying zeropoint consistency needs work. Single-chip zeropoint uncertainty is $\sim 0.05$ mag, so the uncertainty of the difference measurement is 0.07 mag. But \Fig{fw100k_chip_to_chip} actually measures the mean zeropoint offset within among the images in each sky flat. This reduces the statistical uncertainty; making the 0.1 mag scatter in \Fig{fw100k_chip_to_chip} quite significant}
+Given a single-chip zeropoint uncertainty of $\sigma_{m_0} \sim 0.05$ mag, the observed distribution of chip-to-chip zeropoint offsets is consistent with no systematic offset.
+% \comment{JS: this method of verifying zeropoint consistency needs work. Single-chip zeropoint uncertainty is $\sim 0.05$ mag, so the uncertainty of the difference measurement is 0.07 mag. But \Fig{fw100k_chip_to_chip} actually measures the mean zeropoint offset within among the images in each sky flat. This reduces the statistical uncertainty; making the 0.1 mag scatter in \Fig{fw100k_chip_to_chip} quite significant}
 
 \begin{figure}[t]
 \centering
